--- a/public_html/css/contact.css
+++ b/public_html/css/contact.css
@@ -1,7 +1,7 @@
 /*==========contacto===========*/
 .contact-grid {
     display: grid;
-    grid-template-columns: minmax(300px, 1fr) 400px;
+    grid-template-columns: minmax(300px, 1fr) 450px;
     grid-template-rows: 1fr;
     gap: 2rem;
     align-items: stretch;
