--- a/public_html/css/form.css
+++ b/public_html/css/form.css
@@ -126,7 +126,7 @@
 
 @media (min-width:751px){
     .form-title{
-        padding-bottom: 2rem;
+        padding-bottom: 1rem;
     }
 
 }
