--- a/public_html/css/novel.css
+++ b/public_html/css/novel.css
@@ -11,9 +11,8 @@
     align-items: center;
 }
 
-.novel-title {
+.section-header p{
     text-align: center;
-    font-size: 2.5rem;
 }
 
 .novels-grid {
@@ -240,11 +239,6 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 1.5rem;
         padding: 1rem;
-    }
-
-    .novel-title {
-        font-size: 2rem;
-        margin-bottom: 2rem;
     }
 
     .novel-description {
